# nfl-quant-key

./: .Rprofile  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_MODERNIZATION_REPORT.md  GET_BETS.sh  OPTIMIZATION_EXECUTIVE_SUMMARY.txt  PIPELINE_ARCHITECTURE.md  README.md  SCRIPTS_ANALYSIS.json  SCRIPTS_SUMMARY.txt  cleanup_old_files.sh  envinfo.txt  find_td_edges.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_fetch_odds.sh  run_pipeline.sh
.claude/: CLAUDE.md  settings.json
.context/: substrate.md
.cursor/: rules
architecture/: claude.md  field_validation_report.md
configs/: __init__.py  bankroll_config.json  betting_config.json  betting_thresholds.json  calibrator.json  calibrator_player-pass-yds_full.json  calibrator_player-reception-yds_full.joblib  calibrator_player-reception-yds_full.json  calibrator_player-receptions_full.joblib  calibrator_player-receptions_full.json  calibrator_player-rush-yds_full.json  calibrator_player_pass_yds.json  calibrator_player_pass_yds_improved.joblib  calibrator_player_pass_yds_metadata.json  calibrator_player_reception_yds.json  calibrator_player_reception_yds_metadata.json  calibrator_player_receptions.json  calibrator_player_receptions_metadata.json  calibrator_player_rush_yds.json  calibrator_player_rush_yds_improved.joblib  calibrator_player_rush_yds_metadata.json  calibrator_player_rush_yds_pre_fix.json  dashboard_config.json  edge_config.py  ensemble_config.py  feature_engineering_config.json  game_line_calibrator.json  game_line_calibrator_metadata.json  injury_multipliers.yaml  market_bias_corrections.json  model_config.py  model_hyperparameters.json  model_hyperparams.json  odds_api_config.json  optimal_thresholds.json  parlay_config.py  position_market_calibrator.json  position_market_thresholds.json  qb_model_config.py  risk_modes.json  (+14 more)
data/: clv_tracking.db  game_line_predictions_week12.csv  (+27 more)
(+1094 files in other folders)
